Fix sidebar chunk spacing in two-column (desktop-mid) view
Set the top margin of #mw-related-navigation and its first sidebar chunk
to 0. This replicates the margin collapsing that occurs between other
sidebar chunks, so that all the gaps between sidebar chunks are the same
size.

Bug: T181256

--- a/resources/screen-desktop-mid.less
+++ b/resources/screen-desktop-mid.less
@@ -5,8 +5,8 @@
 	.column-left();
 }
 
-#mw-related-navigation {
-	margin-top: 2em;
+#mw-related-navigation > div.sidebar-chunk:first-child {
+	margin-top: 0;
 }
 
 #mw-content {
